# Talk-with-any-PDF

./: .gitignore  app.py  pyproject.toml  requirements.txt
.mypy_cache/3.12/: __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _asyncio.data.json  _asyncio.meta.json  _bisect.data.json  _bisect.meta.json  _blake2.data.json  _blake2.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compat_pickle.data.json  _compat_pickle.meta.json  _compression.data.json  _compression.meta.json  _contextvars.data.json  _contextvars.meta.json  _csv.data.json  _csv.meta.json  _ctypes.data.json  _ctypes.meta.json  _curses.data.json  _curses.meta.json  _decimal.data.json  _decimal.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _hashlib.data.json  _hashlib.meta.json  _heapq.data.json  _heapq.meta.json  _io.data.json  _io.meta.json  (+128 more)
.mypy_cache/3.12/_typeshed/: __init__.data.json  __init__.meta.json  importlib.data.json  importlib.meta.json  wsgi.data.json  wsgi.meta.json  xml.data.json  xml.meta.json
.mypy_cache/3.12/aiohappyeyeballs/: __init__.data.json  __init__.meta.json  _staggered.data.json  _staggered.meta.json  impl.data.json  impl.meta.json  types.data.json  types.meta.json  utils.data.json  utils.meta.json
.mypy_cache/3.12/aiohttp/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json  base_protocol.data.json  base_protocol.meta.json  client.data.json  (+79 more)
(+840 files in other folders)
