[project]
name = "talk-with-quran-pdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.11.0",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-google-genai>=2.1.5",
    "numpy>=2.2.5",
    "pypdf2>=3.0.1",
    "requests>=2.32.3",
    "sentence-transformers>=4.1.0",
    "streamlit>=1.45.1",
]
